# iot_final_project

./: LICENSE  MFRC522.py  README.md  Write.py  rfid_client.py
rfid_auth_server/: Cargo.toml  Rocket.toml  setup.sh
rfid_auth_server/migrations/2018-11-26-025414_file_keys/: down.sql  up.sql
rfid_auth_server/migrations/2018-12-01-194553_create_files/: up.sql
rfid_auth_server/src/: main.rs  schema.rs
