[package]
name = "rfid_auth_server"
version = "0.1.0"
authors = ["technetos <mrgould93@gmail.com>"]
edition = "2018"

[dependencies]
serde_derive = "1.0.27"
serde = "1.0"
serde_json = "1.0"
rocket = "0.4.0-rc.1"
rocket_codegen = "0.4.0-rc.1"
diesel = { version = "1.3.3", features = ["postgres", "chrono", "uuid"] }
heatshield = { git = "https://github.com/technetos/heatshield" }

[dependencies.rocket_contrib]
version = "0.4.0-rc.1"
default-features = false
features = ["json"]
